--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nornj-loader",
-  "version": "0.1.0-alpha.8",
-  "description": "The Webpack loader for template engine NornJ",
+  "version": "0.4.0-rc.2",
+  "description": "Webpack loader for template engine NornJ",
   "main": "index.js",
   "files": [
     "index.js",
