--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-loader",
-  "version": "0.4.0-rc.4",
+  "version": "0.4.1-rc.2",
   "description": "Webpack loader for template engine NornJ",
   "main": "index.js",
   "files": [
@@ -23,6 +23,6 @@
     "loader-utils": "^0.2.16"
   },
   "peerDependencies": {
-    "nornj": ">= 0.4.0-rc.1"
+    "nornj": ">= 0.4.0"
   }
 }
