--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-loader",
-  "version": "0.4.1",
+  "version": "0.4.2-alpha.7",
   "description": "Webpack loader for template engine NornJ",
   "main": "index.js",
   "files": [
@@ -24,6 +24,6 @@
     "loader-utils": "^1.0.2"
   },
   "peerDependencies": {
-    "nornj": "^0.4.1-alpha || ^0.4.1-beta || ^0.4.1-rc || ^0.4.1"
+    "nornj": "*"
   }
 }
