--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-loader",
-  "version": "0.4.2-alpha.7",
+  "version": "0.4.2-beta.1",
   "description": "Webpack loader for template engine NornJ",
   "main": "index.js",
   "files": [
